# text-generation-webui-stable_diffusion

./: .env  .flake8  .gitignore  LICENSE  README.md  context.py  params.py  pyproject.toml  requirements.txt  script.py  sd_client.py  settings.debug.yaml  style.css  transformers_logits.py  ui.py
assets/: example_face_readme.txt
ext_modules/: image_generator.py  text_analyzer.py  vram_manager.py
