[project]
name = "stable_diffusion"
version = "1.6.1"
authors = [{ name = "Enes Sadık Özbek", email = "es.ozbek@outlook.com" }]
description = "Stable Diffusion integration for text-generation-webui"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Trojaner/text-generation-webui-stable_diffusion"

[tool.pyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportOptionalMemberAccess = false
reportFunctionMemberAccess = true
reportPossiblyUnboundVariable = true
reportMissingModuleSource = false

pythonVersion = "3.10"

[tool.isort]
profile = "black"
py_version = 310
known_first_party = ["modules"]
no_lines_before = [
    "FUTURE",
    "STANDARD_LIBRARY",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
